# Manifesto

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  package-lock.json  package.json  tailwind.css
assets/: tailwind.css
nixModules/: devShell.nix
nixModules/lib/: getDeps.nix
src/: main.rs
src/components/: font_face.rs  footer.rs  github_icon.rs  header.rs  main_wrapper.rs  mod.rs
src/views/: index.rs
