[package]
name = "manifesto"
version = "0.1.0"
authors = ["simeon <simmeon.nv@proton.me>"]
edition = "2021"


[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-icons = "0.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
